maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: (Int.type, Int.type) does not take parameters
	def biscuit()=(Int,Int) {
                                ^JediEscaper:24: error: reassignment to val
			compteur = compteur +1
                                 ^JediEscaper:25: error: not found: value getIndications
			if (getIndications==9999){parcours(i,j-1,compteur)}
                            ^JediEscaper:29: error: reassignment to val
				compteur = compteur +1
                                         ^JediEscaper:30: error: not found: value getIndications
				if (getIndications==9999){parcours(i-1,j,compteur)}
                                    ^JediEscaper:34: error: reassignment to val
					compteur = compteur +1
                                                 ^JediEscaper:35: error: not found: value getIndications
					if (getIndications==9999){parcours(i+1,j,compteur)}
                                            ^JediEscaper:38: error: not found: value setIndications
						setIndications(i,j+1,setIndications(i,j)+1)
                                                ^JediEscaper:39: error: reassignment to val
						compteur = compteur +1
                                                         ^JediEscaper:40: error: not found: value getIndications
						if (getIndications==9999){parcours(i,j+1,compteur)}
                                                    ^